# rn-pratice

./: .gitignore  App.tsx  package-lock.json  package.json  style.ts
android/: gradlew.bat
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  frida_jni.c
android/app/src/main/java/com/myapp/: LoadFrida.kt  MainApplication.kt  ModuleFunc.kt  ModuleList.kt
ios/MyApp.xcodeproj/: project.pbxproj
src/components/authComponent/: SignUp.tsx
src/config/: firebaseConfig.ts
src/navigation/: RootNavigator.tsx  types.ts
src/screen/: AppInfoScreen.tsx  HomeScreen.tsx  HomeTab.tsx  HomeTabs.tsx  LoginScreen.tsx  ScriptManageScreen.tsx  ScriptPushScreen.tsx  SelectScriptScreen.tsx  SettingScreen.tsx
src/service/authService/: SignInEmail.tsx  SignUpEmail.tsx
src/utils/: bringScript.tsx  initScript.tsx  scriptList.tsx
